--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 PORT:8080
-DB_URL=postgres://postgres:12345@localhost:5432?sslmode=disable
+DB_URL=postgres://postgres:12345@localhost:5432/rssagg?sslmode=disable
